[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/icon.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Art/Light.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.9676, 31.7722 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.85654, 10.625 )

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 0.2, 0.2 )
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="FlashLight" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="FlashLight"]
visible = false
scale = Vector2( 1, 1 )
collision_layer = 4
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FlashLight/Area2D"]
polygon = PoolVector2Array( 10.6032, -11.0395, 503.488, -177.285, 563.162, 0.426445, 502.097, 161.737, 10.6032, 8.62693 )

[node name="Light2D" type="Light2D" parent="FlashLight"]
position = Vector2( 22.3858, -6.6302 )
scale = Vector2( 0.694422, 0.68727 )
texture = ExtResource( 3 )
offset = Vector2( 400, 0 )
color = Color( 1, 0, 0, 1 )
range_height = -209.4
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 10.0

[node name="LightChecker" type="Sprite" parent="FlashLight"]
visible = false
position = Vector2( 521, -11.6533 )
scale = Vector2( 15.6759, 8.22654 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="FrontArea" type="Area2D" parent="."]
position = Vector2( 60, 0 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrontArea"]
shape = SubResource( 2 )

[node name="BackArea" type="Area2D" parent="."]
position = Vector2( -60, 0 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackArea"]
shape = SubResource( 2 )

[node name="GroundArea" type="Area2D" parent="."]
position = Vector2( 0, 50 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundArea"]
shape = SubResource( 2 )
[connection signal="body_entered" from="FlashLight/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="FlashLight/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="FrontArea" to="." method="_on_FrontArea_body_entered"]
[connection signal="body_exited" from="FrontArea" to="." method="_on_FrontArea_body_exited"]
[connection signal="body_entered" from="BackArea" to="." method="_on_BackArea_body_entered"]
[connection signal="body_exited" from="BackArea" to="." method="_on_BackArea_body_exited"]
[connection signal="body_exited" from="GroundArea" to="." method="_on_GroundArea_body_exited"]
